# transcendental-syntax

./: .gitignore  .ocamlformat-ignore  Makefile  README.md  automata.stellar  dune-project  exec  flake.nix  lsc.opam  main.ml  mllcorrectness.stellar  parser.mly  prolog.stellar  stellar.ml  stellogen.opam  tools.ml  tsyntax.opam  unification.ml
.github/workflows/: build.yml
_build/: .db  .digest-db  log
_build/default/: lsc.dune-package  lsc.install
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: lsc.cma  lsc.cmxa  lsc.cmxs
examples/: automata.sg  automata.stellar  binary4.sg  circuits.sg  lambda.sg  linear_lambda.sg  loop.stellar  loop2.stellar  mll.sg  mllcorrectness.stellar  mllcutelim.stellar  naive_nat.sg  nat.sg  npda.sg  prolog.sg  prolog.stellar  stack.sg  syntax.sg  test.stellar
examples/automata/: nfsa_ending00.stellar
examples/circuits/: false.stellar  not_and_not.stellar
examples/lambda/: id-id.stellar  id-var.stellar  lin-id-id.stellar  lin-id-var.stellar  lproj-var.stellar  typing-lin-id1.stellar  typing-lin-id2.stellar
examples/logicprogramming/: paths.stellar
examples/mll/: correctness.stellar  incorrectness.stellar
examples/stellogen/: mll.sg  naive_nat.sg  syntax.sg  test.sg
guide/: english-guide.txt
guide/en/: Makefile  book.toml
guide/en/src/: SUMMARY.md
guide/fr/: Makefile
guide/fr/src/: SUMMARY.md
guide/src/: SUMMARY.md  definitions.md  exbase.md  execution.md  intro_encoding.md  lambda.md  lintypes.md  pda.md  seq.md  sg.md  sr.md  start.md  substitutions.md  typing.md  unification.md  untypedlin.md
guide/src/automata/: transducers.md
guide/src/introduction/: introduction.md  sr.md  start.md  ts.md
guide/src/stellarresolution/: entities.md  execution.md  exercises.md  (+1 more)
lib/: dune  lexer.mll  linear.ml  stellar.ml  tools.ml  unification.ml
nvim/: README.md
nvim/ftdetect/: stellogen.vim
nvim/syntax/: stellogen.vim
src/: common_parser.mly  common_tokens.mly  dune  lexer.mll  linear.ml  parser.mly  prettyprinter.ml  stellar.ml  unification.ml
src/lsc/: ast.ml  common_parser.mly  dune  format_exn.ml  lsc_ast.ml  lsc_lexer.mll  lsc_parser.mly  parser.mly  pretty.ml  unification.ml
src/stellogen/: ast.ml  common_tokens.mly  dune  format_exn.ml  lexer.mll  lsc_ast.ml  lsc_parser.mly  parser.mly  preproc_lexer.mll  preproc_parser.mly  pretty.ml  sgen_ast.ml  sgen_lexer.mll  sgen_parser.mly  unification.ml
test/: dune  test.ml
test/behavior/: automata.sg  prolog.sg
test/syntax/: definitions.sg
test/testsuite/: automata.sg  prolog.sg
(+57 files in other folders)
